# stock_valuation_calculator

./: .gitignore  AI_GUIDE.md  MCP_GUIDE.md  README.md  ai_assistant.py  ai_chat.py  claude_desktop_config.json  config.py  currency_converter.py  data_fetcher.py  data_processor.py  dcf_calculator.py  install.py  mcp_config.json  mcp_server.py  pyproject.toml  report_generator.py  requirements.txt  setup.py  test_ai.py  test_mcp.py  turbo_cache.py  turbo_industry_mapper.py  valuation.py  wacc_processor.py  wacc_updater.py
data/: industry_mapping.json  stock_portfolios.json  waccChina.xls  waccJapan.xls  waccUS.xls
