[project]
name = "stock-valuation-calculator"
version = "1.0.0"
description = "基于DCF模型的股票估值计算器"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Stock Valuation Calculator", email = "example@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xlrd>=2.0.1",
    "pyarrow>=14.0.0",
    "polars>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
ai = [
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "colorama>=0.4.6"
]
mcp = [
    "mcp>=1.0.0"
]

[project.scripts]
stock-valuation = "valuation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
] 